projects details pages added

--- a/pages/projects-1.html
+++ b/pages/projects-1.html
@@ -1,9 +1,9 @@
 <section class="fade-me-in">
     <div class="">
-        <div class="row row-cols-md-2 row-cols-lg-3">
+        <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3">
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/p_scale.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/petroleum/p_scale.jpg" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Feasibility Study Of Salt Scaling In Downhole Tubulars And Downstream Production Facilities In
                         South Pars Gas Field
@@ -18,12 +18,12 @@
             </div>
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/porescale.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/petroleum/porescale.jpg" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Study of Spatial Distribution of Pore Fluids on Effective Thermal Conductivity of Rocks
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project002.html"
                             hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
                             class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
                             More</button>
@@ -32,13 +32,13 @@
             </div>
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/petroleum/tec.png" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Design and Construction of a High Pressure and High Temperature Apparatus for Measuring Rock
                         Thermal Conductivity
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project003.html"
                             hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
                             class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
                             More</button>
@@ -48,12 +48,12 @@
 
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/petroleum/pipesim.jpeg" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Well modeling of South Pars giant gas field gas producing wells using Pipesim
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project004.html"
                             hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
                             class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
                             More</button>
@@ -63,12 +63,12 @@
 
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/petroleum/virtual-flow-meter.jpeg" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Virtual produced water flow meter for South Pars Gas Field Wells
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project005.html"
                             hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
                             class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
                             More</button>
@@ -78,13 +78,13 @@
 
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/petroleum/well-integrity.png" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Development of localized well integrty management standard for gas producing wells in
                         production life cycle
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project006.html"
                             hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
                             class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
                             More</button>
@@ -94,12 +94,12 @@
             
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/software/welltest_software.jpg" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Surface gas well test analysis and interpretation
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project007.html"
                             hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
                             class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
                             More</button>
