--- a/pages/projects/project002.html
+++ b/pages/projects/project002.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h5 class="fs-6" id="exampleModalLabel">Feasibility Study Of Salt Scaling In Downhole Tubulars And Downstream Production Facilities In South Pars Gas Field
+    <h5 class="fs-6" id="exampleModalLabel">Study of Spatial Distribution of Pore Fluids on Effective Thermal Conductivity of Rocks 
     </h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
@@ -13,13 +13,14 @@
                 <div class="carousel-indicators">
                     <button type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
+              
                 </div>
 
                 <!-- Inner -->
                 <div class="carousel-inner rounded-5 shadow-4-strong">
                     <!-- Single item -->
                     <div class="carousel-item active">
-                        <img src="../../assets/img/p_scale.jpg" class="d-block w-100"
+                        <img src="../../assets/img/projects/petroleum/porescale.jpg" class="d-block w-100"
                             alt="Sunset Over the City" />
                         <div class="carousel-caption d-none d-md-block">
                             <h5></h5>
