--- a/pages/projects-2.html
+++ b/pages/projects-2.html
@@ -3,7 +3,7 @@
         <div class="row row-cols-md-2 row-cols-lg-3">
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/p_scale.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/software/wims_software.jpg" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Well integirty management software in production life cycle for oil and gas wells
                     </div>
@@ -17,7 +17,7 @@
             </div>
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/porescale.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects//software/welltest_software.jpg" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Well test module for gas wells
                     </div>
@@ -46,7 +46,7 @@
 
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/software/etl.png" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         ETL pipelines for daily spread sheets, well log data and surface sensors data
                     </div>
@@ -106,9 +106,24 @@
 
             <div class="col mb-3">
                 <div class="card shadow-5">
-                    <img src="../assets/img/projects/software/fleeto.png" class="card-img-top card-image" alt="" />
+                    <img src="../assets/img/projects/software/wms.jpg" class="card-img-top card-image" alt="" />
                     <div class="px-3 py-2 fw-bold fs-6">
                         Well management software for South Pars Gas Field wells
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                            hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
+                            class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
+                            More</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col mb-3">
+                <div class="card shadow-5">
+                    <img src="../assets/img/projects/software/diagnostic.jpg" class="card-img-top card-image" alt="" />
+                    <div class="px-3 py-2 fw-bold fs-6">
+                        Well diagnostic and surveillance module
                     </div>
                     <div class="card-footer">
                         <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
