social media links added to right circular menue

--- a/circular-menue.html
+++ b/circular-menue.html
@@ -10,10 +10,10 @@
   </a>
 
   <menu class="items-wrapper">
-    <a href="#" class="menu-item"><img src="./assets/icons/skype.svg" alt=""></a>
-    <a href="#" class="menu-item"><img src="./assets/icons/github.svg" alt=""></a>
-    <a href="#" class="menu-item"><img src="./assets/icons/gmail.svg" alt=""></a>
-    <a href="#" class="menu-item"><img src="./assets/icons/phone.svg" alt=""></a>
+    <a href="skype:mahdi.sma@gmail.com?chat" class="menu-item"><img src="./assets/icons/skype.svg" alt=""></a>
+    <a href="https://github.com/sm-alavi" class="menu-item"><img src="./assets/icons/github.svg" alt=""></a>
+    <a href="mailto:me@m-alavi.ir" class="menu-item"><img src="./assets/icons/gmail.svg" alt=""></a>
+    <a href="tel:+989371910385" class="menu-item"><img src="./assets/icons/phone.svg" alt=""></a>
   </menu>
 
 </div>
@@ -21,7 +21,7 @@
 
 <div id="circularMenu1" class="circular-menu circular-menu-left">
 
-  <a class="floating-btn" onclick="document.getElementById('circularMenu1').classList.toggle('active');">
+  <a class="floating-btn text-center fw-bold" onclick="document.getElementById('circularMenu1').classList.toggle('active');">
     Menu
   </a>
 
