--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="loader spinner-wheel htmx-indicator" id="spinner">
   </div>
 
-  <main id="main" class="vh-100" hx-get="./pages/home.html" hx-swap="innerHTML" hx-trigger="load">
+  <main id="main" class="" hx-get="./pages/home.html" hx-swap="innerHTML" hx-trigger="load">
   </main>
 
 
@@ -29,6 +29,8 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="./assets/js/popper.min.js"></script>
+  <script src="./assets/js/typewrite.js"></script>
+
 
 
 </body>
